--- a/src/app/admin/admin-main/admin-unit/admin-add-pack-unit/admin-add-pack-unit.component.html
+++ b/src/app/admin/admin-main/admin-unit/admin-add-pack-unit/admin-add-pack-unit.component.html
@@ -2,7 +2,7 @@
   <div class="header">
     <h3 class="label-header">{{ this.data.title | translate }}</h3>
   </div>
-  <form class="content">
+  <form [formGroup]="addForm" class="content">
     <div class="row">
       <div class="col-md-6">
         <div class="label text-color">
@@ -16,6 +16,7 @@
           [showClear]="true"
           [options]="listCodeDichVu"
           (onChange)="onChangeMaGoi($event)"
+          formControlName="packCode"
         >
         </p-dropdown>
       </div>
@@ -26,7 +27,7 @@
           <span class="required-title">*</span>
         </div>
         <div class="input-data fff">
-          <input type="text" value="{{ namePack }}" [readonly]="true" />
+          <input type="text" formControlName="namePack" value="{{ namePack }}" [readonly]="true" />
         </div>
         <div class="invalid"></div>
       </div>
@@ -39,7 +40,7 @@
           <span class="required-title">*</span>
         </div>
         <div class="input-data fff">
-          <input type="text" value="{{totalBeforeVAT}}" readonly />
+          <input type="text" formControlName="totalBeforeVAT" value="{{totalBeforeVAT}}" readonly />
         </div>
       </div>
 
@@ -49,7 +50,7 @@
           <span class="required-title">*</span>
         </div>
         <div class="input-data fff">
-          <input type="text" value="{{totalAfterVAT}}" readonly />
+          <input type="text" formControlName="totalAfterVAT" value="{{totalAfterVAT}}" readonly />
         </div>
       </div>
     </div>
@@ -58,7 +59,7 @@
       <div class="col-md-6">
         <div class="label text-color">{{ "Thời gian(tháng) *" | translate }}</div>
         <div class="input-data fff">
-          <input type="text" value="{{duration}}" readonly />
+          <input type="text" formControlName="duration" value="{{duration}}" readonly />
         </div>
       </div>
 
@@ -67,7 +68,7 @@
           {{ "Số lượng hợp đồng *" | translate }}
         </div>
         <div class="input-data fff">
-          <input type="text" value="{{numberOfContracts}}" readonly />
+          <input type="text" formControlName="numberOfContracts" value="{{numberOfContracts}}" readonly />
         </div>
       </div>
     </div>
@@ -79,9 +80,7 @@
           <span class="required-title">*</span>
         </div>
         <div class="input-data fff">
-          <!-- dungpt -->
-          <!-- tao ngModel va  name cho input thoi gian -->
-          <input type="text" value="{{type}}" readonly />
+          <input type="text" formControlName="type" value="{{type}}" readonly />
         </div>
       </div>
 
@@ -91,7 +90,7 @@
           <span class="required-title">*</span>
         </div>
         <div class="input-data fff">
-          <input type="text" value="{{calculatorMethod}}" readonly />
+          <input type="text" formControlName="calculatorMethod" value="{{calculatorMethod}}" readonly />
         </div>
       </div>
     </div>
@@ -108,6 +107,7 @@
           [showIcon]="true"
           dateFormat="dd/mm/yy"
           #created_at
+          formControlName="purchaseDate"
         >
         </p-calendar>
       </div>
@@ -121,6 +121,7 @@
         placeholder="Chọn kiểu thanh toán"
         [options]="listPaidType"
         optionLabel="name"
+        formControlName="paymentType"
         > 
       </p-dropdown>
       </div>
@@ -136,6 +137,7 @@
         optionLabel="name"
         [options]="listStatusType"
         (onChange)="onChangeStatus($event)"
+        formControlName="paymentStatus"
         > </p-dropdown>
       </div>
 
@@ -150,6 +152,7 @@
           [showIcon]="true"
           dateFormat="dd/mm/yy"
           #created_at
+          formControlName="paymentDate"
         >
         </p-calendar>
       </div>
@@ -167,6 +170,7 @@
           [showIcon]="true"
           dateFormat="dd/mm/yy"
           #created_at
+          formControlName="startDate"
         ></p-calendar>
       </div>
 
@@ -181,6 +185,7 @@
           [showIcon]="true"
           dateFormat="dd/mm/yy"
           #created_at
+          formControlName="endDate"
         ></p-calendar>
       </div>
     </div>
@@ -189,7 +194,7 @@
       <button class="cancel-button" type="button" (click)="cancel()">
         {{ "btn.cancel" | translate }}
       </button>
-      <button class="save-button">
+      <button class="save-button" (click)="addPackUnit()">
         {{ "btn.save" | translate }}
       </button>
     </div>
