--- a/src/app/main/contract/shared/model/determine-signer/determine-signer.component.html
+++ b/src/app/main/contract/shared/model/determine-signer/determine-signer.component.html
@@ -51,7 +51,7 @@
                 <div class="participants__name" style="width: 90%">
                   <div class="label_detail text-color">Số điện thoại&nbsp;-&nbsp;<div style="color: #ffc107;">({{'Nhận thông báo khi xử lý hợp đồng' | translate}})</div></div>
                   <div class="input-data">
-                    <input type="number" placeholder="{{'Nhập số điện thoại' | translate}}" [(ngModel)]="d.phone">
+                    <input type="text" placeholder="{{'Nhập số điện thoại' | translate}}" [(ngModel)]="d.phone">
                   </div>
                 </div>
               </div>
@@ -120,9 +120,9 @@
                 </div>
 
                 <div class="participants__name">
-                  <div class="label_detail text-color">Số điện thoại&nbsp;-&nbsp;<div style="color: #ffc107;">({{'Nhận thông báo khi xử lý hợp đồng' | translate}})</div></div>
+                  <div class="label_detail text-color">Số điện thoại&nbsp;<span *ngIf="getDataSignCka(d).length > 0" class="required-title">*</span>-&nbsp;<div style="color: #ffc107;">({{'Nhận thông báo khi xử lý hợp đồng' | translate}})</div></div>
                   <div class="input-data">
-                    <input type="number" placeholder="{{'Nhập số điện thoại' | translate}}" [(ngModel)]="d.phone">
+                    <input type="text" placeholder="{{'Nhập số điện thoại' | translate}}" [(ngModel)]="d.phone">
                   </div>
                 </div>
                 <!--                <div *ngIf="getOtp(d)" class="participants-otp">-->
@@ -135,11 +135,11 @@
                 <!--                </div>-->
               </div>
 
-              <div class="participants--input" style="display: flex">
+              <div class="participants--input" style="display: flex" *ngIf="getDataSignEkyc(d).length > 0">
                 <div class="participants__name" style="width: 90%">
                   <div class="label_detail text-color">CMT/CCCD&nbsp;<span class="required-title">*</span></div>
                   <div class="input-data">
-                    <input type="number" placeholder="{{'Nhập CMT/CCCD' | translate}}" [(ngModel)]="d.card_id">
+                    <input type="text" placeholder="{{'Nhập CMT/CCCD' | translate}}" [(ngModel)]="d.card_id">
                   </div>
                 </div>
               </div>
@@ -211,18 +211,18 @@
                 </div>
 
                 <div class="participants__name">
-                  <div class="label_detail text-color">Số điện thoại&nbsp;-&nbsp;<div style="color: #ffc107;">({{'Nhận thông báo khi xử lý hợp đồng' | translate}})</div></div>
+                  <div class="label_detail text-color">Số điện thoại&nbsp;<span *ngIf="getDataSignCka(d).length > 0" class="required-title">*</span>-&nbsp;<div style="color: #ffc107;">({{'Nhận thông báo khi xử lý hợp đồng' | translate}})</div></div>
                   <div class="input-data">
-                    <input type="number" placeholder="{{'Nhập số điện thoại' | translate}}" [(ngModel)]="d.phone">
+                    <input type="text" placeholder="{{'Nhập số điện thoại' | translate}}" [(ngModel)]="d.phone">
                   </div>
                 </div>
               </div>
 
-              <div class="participants--input" style="display: flex">
+              <div class="participants--input" style="display: flex" *ngIf="getDataSignEkyc(d).length > 0">
                 <div class="participants__name" style="width: 90%">
                   <div class="label_detail text-color">CMT/CCCD&nbsp;<span class="required-title">*</span></div>
                   <div class="input-data">
-                    <input type="number" placeholder="{{'Nhập CMT/CCCD' | translate}}" [(ngModel)]="d.card_id">
+                    <input type="text" placeholder="{{'Nhập CMT/CCCD' | translate}}" [(ngModel)]="d.card_id">
                   </div>
                 </div>
               </div>
@@ -303,7 +303,7 @@
                   <div class="participants__name" style="width: 90%">
                     <div class="label_detail text-color">Số điện thoại&nbsp;-&nbsp;<div style="color: #ffc107;">({{'Nhận thông báo khi xử lý hợp đồng' | translate}})</div></div>
                     <div class="input-data">
-                      <input type="number" placeholder="{{'Nhập số điện thoại' | translate}}" [(ngModel)]="d.phone">
+                      <input type="text" placeholder="{{'Nhập số điện thoại' | translate}}" [(ngModel)]="d.phone">
                     </div>
                   </div>
                 </div>
@@ -350,7 +350,7 @@
                   <div class="participants__name" style="width: 90%">
                     <div class="label_detail text-color">Số điện thoại&nbsp;-&nbsp;<div style="color: #ffc107;"> ({{'Nhận thông báo khi xử lý hợp đồng' | translate}})</div></div>
                     <div class="input-data">
-                      <input type="number" placeholder="{{'Nhập số điện thoại' | translate}}" [(ngModel)]="d.phone">
+                      <input type="text" placeholder="{{'Nhập số điện thoại' | translate}}" [(ngModel)]="d.phone">
                     </div>
                   </div>
                 </div>
@@ -424,18 +424,18 @@
                   <!--                  </div>-->
 
                   <div class="participants__name">
-                    <div class="label_detail text-color">Số điện thoại&nbsp;-&nbsp;<div style="color: #ffc107;">({{'Nhận thông báo khi xử lý hợp đồng' | translate}})</div></div>
+                    <div class="label_detail text-color">Số điện thoại&nbsp;<span *ngIf="getDataSignCka(d).length > 0" class="required-title">*</span>-&nbsp;<div style="color: #ffc107;">({{'Nhận thông báo khi xử lý hợp đồng' | translate}})</div></div>
                     <div class="input-data">
-                      <input type="number" placeholder="{{'Nhập số điện thoại' | translate}}" [(ngModel)]="d.phone">
+                      <input type="text" placeholder="{{'Nhập số điện thoại' | translate}}" [(ngModel)]="d.phone">
                     </div>
                   </div>
                 </div>
 
-                <div class="participants--input" style="display: flex">
+                <div class="participants--input" style="display: flex" *ngIf="getDataSignEkyc(d).length > 0">
                   <div class="participants__name" style="width: 90%">
                     <div class="label_detail text-color">CMT/CCCD&nbsp;<span class="required-title">*</span></div>
                     <div class="input-data">
-                      <input type="number" placeholder="{{'Nhập CMT/CCCD' | translate}}" [(ngModel)]="d.card_id">
+                      <input type="text" placeholder="{{'Nhập CMT/CCCD' | translate}}" [(ngModel)]="d.card_id">
                     </div>
                   </div>
                 </div>
@@ -507,18 +507,18 @@
                   </div>
 
                   <div class="participants__name">
-                    <div class="label_detail text-color">Số điện thoại&nbsp;-&nbsp;<div style="color: #ffc107;"> ({{'Nhận thông báo khi xử lý hợp đồng' | translate}})</div></div>
+                    <div class="label_detail text-color">Số điện thoại&nbsp;<span *ngIf="getDataSignCka(d).length > 0" class="required-title">*</span>-&nbsp;<div style="color: #ffc107;"> ({{'Nhận thông báo khi xử lý hợp đồng' | translate}})</div></div>
                     <div class="input-data">
-                      <input type="number" placeholder="{{'Nhập số điện thoại' | translate}}" [(ngModel)]="d.phone">
+                      <input type="text" placeholder="{{'Nhập số điện thoại' | translate}}" [(ngModel)]="d.phone">
                     </div>
                   </div>
                 </div>
 
-                <div class="participants--input" style="display: flex">
+                <div class="participants--input" style="display: flex" *ngIf="getDataSignEkyc(d).length > 0">
                   <div class="participants__name" style="width: 90%">
                     <div class="label_detail text-color">CMT/CCCD&nbsp;<span class="required-title">*</span></div>
                     <div class="input-data">
-                      <input type="number" placeholder="{{'Nhập CMT/CCCD' | translate}}" [(ngModel)]="d.card_id">
+                      <input type="text" placeholder="{{'Nhập CMT/CCCD' | translate}}" [(ngModel)]="d.card_id">
                     </div>
                   </div>
                 </div>
@@ -545,7 +545,7 @@
                 style="width: 25px; height: 25px" type="number"
                 oninput="this.value = this.value.replace(/[^0-9.]/g, '', /[^\d*[.]?\d*$]/g).replace(/(\..*?)\..*/g, '$1');"
                 [(ngModel)]="d.ordering" [disabled]="getPartnerSignature(item).length == 1">
-              <div class="col-md-10 participants__content--input" style="display: flex; flex-direction: column">
+              <div class="col-md-10 participants__content--input" style="display: flex; flex-direction: column;margin-bottom: 14px">
                 <div class="participants--input" style="display: flex">
                   <div class="participants__name">
                     <div class="label_detail text-color">{{'user.name' | translate}}&nbsp;<span class="required-title">*</span>
@@ -587,9 +587,9 @@
                   </div>
 
                   <div class="participants__name">
-                    <div class="label_detail text-color">Số điện thoại&nbsp;-&nbsp;<div style="color: #ffc107;">({{'Nhận thông báo khi xử lý hợp đồng' | translate}})</div></div>
+                    <div class="label_detail text-color">Số điện thoại&nbsp;<span class="required-title">*</span>-&nbsp;<div style="color: #ffc107;">({{'Nhận thông báo khi xử lý hợp đồng' | translate}})</div></div>
                     <div class="input-data">
-                      <input type="number" placeholder="{{'Nhập số điện thoại' | translate}}" [(ngModel)]="d.phone">
+                      <input type="text" placeholder="{{'Nhập số điện thoại' | translate}}" [(ngModel)]="d.phone">
                     </div>
                   </div>
                   <!--                    <div *ngIf="getOtp(d)" class="participants-otp">-->
@@ -602,11 +602,11 @@
                   <!--                    </div>-->
                 </div>
 
-                <div class="participants--input" style="display: flex">
+                <div class="participants--input" style="display: flex" *ngIf="getDataSignEkyc(d).length > 0">
                   <div class="participants__name" style="width: 90%">
                     <div class="label_detail text-color">CMT/CCCD&nbsp;<span class="required-title">*</span></div>
                     <div class="input-data">
-                      <input type="number" placeholder="{{'Nhập CMT/CCCD' | translate}}" [(ngModel)]="d.card_id">
+                      <input type="text" placeholder="{{'Nhập CMT/CCCD' | translate}}" [(ngModel)]="d.card_id">
                     </div>
                   </div>
                 </div>
