integrate api update goi dich vu cho to chuc

--- a/src/app/admin/admin-main/admin-unit/admin-add-pack-unit/admin-add-pack-unit.component.html
+++ b/src/app/admin/admin-main/admin-unit/admin-add-pack-unit/admin-add-pack-unit.component.html
@@ -194,7 +194,7 @@
       <button class="cancel-button" type="button" (click)="cancel()">
         {{ "btn.cancel" | translate }}
       </button>
-      <button class="save-button" (click)="addPackUnit()">
+      <button class="save-button" (click)="onSubmit()">
         {{ "btn.save" | translate }}
       </button>
     </div>
