--- a/src/app/main/contract-signature/components/consider-contract/confirm-sign-otp/confirm-sign-otp.component.html
+++ b/src/app/main/contract-signature/components/consider-contract/confirm-sign-otp/confirm-sign-otp.component.html
@@ -1,25 +1,24 @@
 <div class="container-fluid">
   <div style="text-align: center; font-weight: bold">
-    <h3 style="color: #106DB6">XÁC THỰC MÃ OTP</h3>
+    <h3 style="color: #106DB6; font-family: inherit;text-transform: uppercase;">XÁC THỰC MÃ OTP</h3>
   </div>
-  <form (ngSubmit)="onSubmit()" [formGroup]="myForm" class="content">
+  <form [formGroup]="addForm" class="content">
     <div class="name-item">
-      <p>Chúng tôi đã gửi mã OTP về số điện thoại 091234567. Vui lòng nhập mã và tiếp tục thực hiện.</p>
+      <p>Chúng tôi đã gửi mã OTP về số điện thoại <b style="color: #106DB6;">{{this.datas.phone}}</b>.<br>
+        Vui lòng nhập mã và tiếp tục thực hiện.</p>
     </div>
 
     <div class="name-item">
-      <input class="input-otp" id="otp" autocomplete="off" type="text" formControlName="email" placeholder="Nhập OTP">
-      <div class="label-input-otp" *ngIf="!isSentOpt" (click)="countTimeOtp()">Gửi lại mã OTP</div>
-      <div class="label-input-otp-sent" *ngIf="isSentOpt">Mã OTP hết hạn sau {{counter$ | async}}</div>
-
+      <input class="input-otp" id="otp" autocomplete="off" type="text" formControlName="otp" placeholder="Nhập OTP">
+      <div *ngIf="submitted && f.otp.errors" class="invalid">
+        <div *ngIf="f.otp.errors.required">{{'Mã OTP không được để trống' | translate}}</div>
+      </div>
+      <div class="label-input-otp-sent">Mã OTP hết hạn sau {{counter$ | async }}s</div>
     </div>
 
     <div class="select-option">
-      <button
-        class="dx-button-form dx-button-close dx-button-90"
-        (click)="submitOtp()"
-        type="button">Xác nhận
-      </button>
+      <button class="dx-button-form dx-button-close dx-button-90" (click)="sendOtp(this.datas.recipient_id, this.datas.phone)" type="button">Gửi lại OTP</button>
+      <button class="dx-button-form dx-button-close dx-button-90" (click)="onSubmit()" type="button">Xác nhận</button>
     </div>
   </form>
 </div>
