--- a/src/app/admin/admin-main/admin-unit/admin-detail-pack-unit/admin-detail-pack-unit.component.html
+++ b/src/app/admin/admin-main/admin-unit/admin-detail-pack-unit/admin-detail-pack-unit.component.html
@@ -1,156 +1,122 @@
 <div class="container-fluid">
   <div class="header">
-    <h3 class="label-header">{{ this.data.title | translate }}</h3>
+    <h3 class="label-header">{{this.data.title | translate}}</h3>
   </div>
-  <form class="content">
-    <div class="row">
-      <div class="col-md-6">
-        <div class="label text-color">
-          {{ "Mã gói dịch vụ" | translate }}
-        </div>
-        <div class="input-data fff">
-          <input readonly />
-        </div>
-      </div>
-
-      <div class="col-md-6">
-        <div class="label text-color">
-          {{ "Tên gói dịch vụ" | translate }}
-        </div>
-        <div class="input-data fff">
-          <input type="text" [readonly]="true" />
-        </div>
-        <div class="invalid"></div>
-      </div>
-    </div>
-
-    <div class="row" style="padding-top: 10px">
-      <div class="col-md-6">
-        <div class="label text-color">
-          {{ "Đơn giá (VND)" | translate }}
-        </div>
-        <div class="input-data fff">
-          <input type="text" readonly />
-        </div>
-      </div>
-
-      <div class="col-md-6">
-        <div class="label text-color">
-          {{ "Thể thức tính" | translate }}
-        </div>
-        <div class="input-data fff">
-          <input type="text" readonly />
-        </div>
-      </div>
-    </div>
-
-    <div class="row" style="padding-top: 10px">
-      <div class="col-md-6">
-        <div class="label text-color">{{ "Thời gian " | translate }}</div>
-        <div class="input-data fff">
-          <input type="text" readonly />
-        </div>
-      </div>
-
-      <div class="col-md-6">
-        <div class="label text-color">
-          {{ "Số lượng hợp đồng " | translate }}
-        </div>
-        <div class="input-data fff">
-          <input type="text" readonly />
-        </div>
-      </div>
-    </div>
-
-    <div class="row" style="padding-top: 10px">
-      <div class="col-md-6">
-        <div class="label text-color">
-          {{ "Loại gói dịch vụ" | translate }}
-        </div>
-        <div class="input-data">
-          <input readonly type="text" />
-        </div>
-      </div>
-
-      <div class="col-md-6">
-        <div class="label text-color">
-          {{ "Điều kiện" | translate }}
-        </div>
-        <div class="input-data fff">
-          <!-- dungpt -->
-          <!-- tao ngModel va  name cho input so luong hop dong -->
-          <input type="text" readonly />
-        </div>
-      </div>
-    </div>
-
-    <div class="row" style="padding-top: 10px">
-      <div class="col-md-6">
-        <div class="label text-color">
-          {{ "Ngày mua gói" | translate }}
-        </div>
-        <div class="input-data">
-          <input readonly />
-        </div>
-      </div>
-
-      <div class="col-md-6">
-        <div class="label text-color">
-          {{ "Kiểu thanh toán" | translate }}
-        </div>
-        <div class="input-data">
-          <input readonly />
-        </div>
-      </div>
-    </div>
-
-    <div class="row" style="padding-top: 10px">
-      <div class="col-md-6">
-        <div class="label text-color">
-          {{ "Trạng thái thanh toán " | translate }}
-        </div>
-        <div class="input-data fff">
-            <input readonly/>
+  <div class="content">
+      <div class="row">  
+          <div class="col-md-6">  
+              <div class="label_item">{{'Mã gói dịch vụ' | translate }}</div>
+              <div>
+                  <div [innerHTML]="this.datas?.code" class="input_text"></div>
+              </div>
+          </div>
+      
+          <div class="col-md-6">
+              <div class="label_item">{{'Tên gói dịch vụ' | translate }}</div>
+              <div>
+                  <div [innerHTML]="this.datas?.name" class="input_text"></div>
+              </div>
           </div>
       </div>
 
-      <div class="col-md-6">
-        <div class="label text-color">
-          {{ "Ngày thanh toán " | translate }}
-        </div>
-        <div class="input-data fff">
-          <input />
-        </div>
-      </div>
-    </div>
-
-    <div class="row" style="padding-top: 10px">
-      <div class="col-md-6">
-        <div class="label text-color">
-          {{ "Ngày bắt đầu" | translate }}
-        </div>
-        <div class="input-data fff">
-          <input readonly />
-        </div>
+      <div class="row" style="padding-top: 10px;">
+          <div class="col-md-6">
+              <div class="label_item">{{'Đơn giá trước VAT (VND)' | translate }}</div>
+              <div>
+                  <div [innerHTML]="this.datas?.totalBeforeVAT" class="input_text"></div>
+              </div>
+          </div>
+      
+          <div class="col-md-6">
+              <div class="label_item">{{'Đơn giá sau VAT (VND)' | translate }}</div>
+              <div>
+                  <div [innerHTML]="this.datas?.totalAfterVAT" class="input_text"></div>
+              </div>
+          </div>
       </div>
 
-      <div class="col-md-6">
-        <div class="label text-color">
-          {{ "Ngày kết thúc" | translate }}
+      <div class="row" style="padding-top: 10px;">
+        <div class="col-md-6">
+            <div class="label_item">{{'Thời gian(tháng)' | translate }}</div>
+            <div>
+                <div [innerHTML]="this.datas?.duration" class="input_text"></div>
+            </div>
         </div>
-        <div class="input-data fff">
-          <input readonly />
+    
+        <div class="col-md-6">
+            <div class="label_item">{{'Số lượng hợp đồng' | translate }}</div>
+            <div>
+                <div [innerHTML]="this.datas?.numberOfContracts" class="input_text"></div>
+            </div>
         </div>
-      </div>
     </div>
 
-    <div class="row" style="justify-content: center; padding-top: 10px">
-      <button class="cancel-button" type="button" (click)="cancel()">
-        {{ "btn.cancel" | translate }}
-      </button>
-      <button class="save-button">
-        {{ "btn.save" | translate }}
-      </button>
+      <div class="row" style="padding-top: 10px;">
+          <div class="col-md-6">
+              <div class="label_item">{{'Loại gói dịch vụ' | translate }}</div>
+              <div>
+                  <div [innerHTML]="this.datas?.serviceType" class="input_text"></div>
+              </div>
+          </div>
+      
+          <div class="col-md-6">
+              <div class="label_item">{{'Thể thức tính' | translate }}</div>
+              <div>
+                  <div [innerHTML]="this.datas?.calculatorMethod" class="input_text"></div>
+              </div>
+          </div>
+      </div>
+
+      <div class="row" style="padding-top: 10px;">
+          <div class="col-md-6">
+              <div class="label_item">{{'Ngày mua gói' | translate }}</div>
+              <div>
+                  <div [innerHTML]="this.datas?.purchaseDate" class="input_text"></div>
+              </div>
+          </div>
+      
+          <div class="col-md-6">
+              <div class="label_item">{{'Kiểu thanh toán' | translate }}</div>
+              <div>
+                  <div [innerHTML]="this.datas?.paymentType" class="input_text"></div>
+              </div>
+          </div>
+      </div>
+
+      <div class="row" style="padding-top: 10px;">
+        <div class="col-md-6">
+            <div class="label_item">{{'Trạng thái thanh toán' | translate }}</div>
+            <div>
+                <div [innerHTML]="this.datas?.paymentStatus" class="input_text"></div>
+            </div>
+        </div>
+    
+        <div class="col-md-6">
+            <div class="label_item">{{'Ngày thanh toán' | translate }}</div>
+            <div>
+                <div [innerHTML]="this.datas?.paymentDate" class="input_text"></div>
+            </div>
+        </div>
     </div>
-  </form>
+
+    <div class="row" style="padding-top: 10px;">
+      <div class="col-md-6">
+          <div class="label_item">{{'Ngày bắt đầu' | translate }}</div>
+          <div>
+              <div [innerHTML]="this.datas?.startDate" class="input_text"></div>
+          </div>
+      </div>
+  
+      <div class="col-md-6">
+          <div class="label_item">{{'Ngày kết thúc' | translate }}</div>
+          <div>
+              <div [innerHTML]="this.datas?.endDate" class="input_text"></div>
+          </div>
+      </div>
+  </div>
+  
+      <div class="row" style="justify-content: center;padding-top: 10px;">
+          <button class="cancel-button" (click)="cancel()" type="button">{{'btn.close' | translate}}</button>
+      </div>
+  </div>
 </div>
