edit form signup

--- a/src/app/login/signup/signup.component.html
+++ b/src/app/login/signup/signup.component.html
@@ -36,9 +36,9 @@
 
             <div class="row" style="padding-top: 2%;">
               <div class="col-md-6">
-                <div class="label text-color">{{'Địa chỉ' | translate }}</div>
+                <div class="label text-color">{{'Mã tổ chức' | translate }}</div>
                 <div class="input-line">
-                  <input type="text" placeholder="{{'Nhập địa chỉ' | translate}}"
+                  <input type="text" placeholder="{{'Nhập mã tổ chức' | translate}}"
                     formControlName="address" class="input-text"/>
                 </div>
                 <div *ngIf="submitted && f.address.errors" class="invalid">
@@ -105,6 +105,19 @@
                   <div *ngIf="f.phone.errors.required">{{'Số điện thoại không được để trống' | translate}}</div>
                   <div *ngIf="f.phone.errors.pattern">{{'Số điện thoại không đúng định dạng' | translate}}</div>
                 </div>
+              </div>
+            </div>
+
+            <div class="row" style="padding-top: 2%;">
+              <div class="col-md-12">
+                  <div class="label text-color">{{'Địa chỉ' | translate }} <span class="required-title">*</span></div>
+                  <div class="input-line">
+                    <input type="text" placeholder="{{'Nhập địa chỉ' | translate}}"
+                      formControlName="email" class="input-text"/>
+                  </div>
+                  <div *ngIf="submitted && f.email.errors" class="invalid">
+                    <div *ngIf="f.email.errors.required">{{'Địa chỉ không được để trống' | translate}}</div>
+                  </div>
               </div>
             </div>
 
