--- a/src/app/main/contract-signature/shared/model/processing-handle-econtract/processing-handle-econtract.component.html
+++ b/src/app/main/contract-signature/shared/model/processing-handle-econtract/processing-handle-econtract.component.html
@@ -1,5 +1,5 @@
 <div class="container-fluid">
-  <h3 style="text-align: center; color: #106DB6">LUỒNG XỬ LÝ HỢP ĐỒNG</h3>
+  <h3 style="text-align: center; color: #106DB6">{{'contract_processing_flow' | translate}}</h3>
   <div style="max-height: 405px; overflow: auto;font-size: 14px">
     <div *ngFor="let d of is_list_name">
       <div style="display: flex; justify-content: space-between; text-align: left; margin-bottom: 10px">
