--- a/src/app/admin/admin-main/admin-unit/admin-unit.component.html
+++ b/src/app/admin/admin-main/admin-unit/admin-unit.component.html
@@ -27,7 +27,7 @@
         class="btn btn-lg btn-block btn_submit"
         (click)="addUnit()"
       >
-        {{ "btn.add" | translate }}
+        {{ "Thêm mới tổ chức" | translate }}
       </button>
     </div>
   </div>
