--- a/src/app/admin/admin-main/admin-user/admin-user.component.html
+++ b/src/app/admin/admin-main/admin-user/admin-user.component.html
@@ -19,8 +19,8 @@
         </div>
       </div>
       <div class="col-md-3 btn_search">
-        <button *ngIf="this.searchUserRole === true" class="btn btn-lg btn-block btn_submit" (click)="searchUser()">{{'btn.search' | translate }}</button>
-        <button *ngIf="this.addUserRole === true" class="btn btn-lg btn-block btn_submit" (click)="addUser()">{{'btn.add' | translate }}</button>
+        <button style="width: 170px" *ngIf="this.searchUserRole === true" class="btn btn-lg btn-block btn_submit" (click)="searchUser()">{{'btn.search' | translate }}</button>
+        <button style="width: 170px"   *ngIf="this.addUserRole === true" class="btn btn-lg btn-block btn_submit" (click)="addUser()">{{'Thêm mới người dùng' | translate }}</button>
       </div>
     </div>
     <div class="row" style="padding-top: 20px;">
