--- a/src/app/admin/admin-main/admin-pack/admin-pack.component.html
+++ b/src/app/admin/admin-main/admin-pack/admin-pack.component.html
@@ -29,7 +29,7 @@
         class="btn btn-lg btn-block btn_submit"
         (click)="addPack()"
       >
-        {{ "btn.add" | translate }}
+        {{ "Thêm mới gói dịch vụ" | translate }}
       </button>
     </div>
   </div>
